Fixing issues regarding spacing.

--- a/src/Components/Accordion/Accordion.css
+++ b/src/Components/Accordion/Accordion.css
@@ -1,6 +1,6 @@
 .Accordion .subHeading {
   font-size: 18px;
-  color: #2f281e;
+  color: rgb(107, 107, 107);
   font-weight: bold;
   margin-left: 4.2rem;
 }
@@ -14,4 +14,5 @@
 .Accordion .listItem {
   display: flex;
   align-items: center;
+  margin-left: 1.5rem;
 }
