--- a/src/Components/Phone1/Phone1.css
+++ b/src/Components/Phone1/Phone1.css
@@ -1,10 +1,5 @@
-.Phone1 {
-  margin-right: 4rem;
-}
-
 .Phone1 .desktopImg img {
-  width: 70%;
-  margin-right: 4rem;
+  width: 80%;
   margin-top: 4rem;
 }
 
@@ -14,12 +9,6 @@
 
 .Phone1 .mobileImg img {
   width: 80%;
-}
-
-@media (max-width: 1024px) {
-  .Phone1 .desktopImg img {
-    width: 80%;
-  }
 }
 
 @media (max-width: 935px) {
